# OpenDDE

./: environment.yaml  pyproject.toml
docs/: msa_template_pipeline.md
opendde/config/: data.py  dependency_url.py
runner/: template_search.py
scripts/: download_opendde_data.sh
tests/: test_dependency_url.py
