[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendde"
dynamic = ["version"]
description = "Open-Source Drug Design Engine"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Aureka Biotechnologies", email = "ai@aureka.com" },
]
keywords = [
  "alphafold3",
  "protein-structure-prediction",
  "structural-biology",
  "drug-design",
  "diffusion-model",
  "bioinformatics",
  "deep-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: POSIX :: Linux",
]

dependencies = [
  "torch==2.12.1",
  "torchvision==0.22.1",
  "torchaudio==2.7.1",
  "click>=8.1.0",
  "scipy>=1.9.0",
  "ml_collections==1.1.0",
  "tqdm==4.67.1",
  "pandas==2.3.1",
  "PyYAML==6.0.2",
  "matplotlib==3.10.5",
  "ipywidgets==8.1.7",
  "py3Dmol==2.5.2",
  "rdkit==2025.9.3",
  "biopython==1.85",
  "biotite==1.4.0",
  "modelcif==1.4",
  "gemmi==0.6.7",
  "pdbeccdutils==1.0.0",
  "scikit-learn==1.7.1",
  "scikit-learn-extra==0.3.0",
  "pydantic>=2.0.0",
  "optree==0.17.0",
  "protobuf==6.31.1",
  "numpy==2.4.1",
  "networkx>=3.4.2",
  "requests>=2.31.0",
  "cuequivariance-ops-torch-cu12==0.8.0; platform_system == 'Linux'",
  "cuequivariance-torch==0.8.0; platform_system == 'Linux'",
  "triton==3.3.1; platform_system == 'Linux'",
]

[project.scripts]
opendde = "runner.batch_inference:opendde_cli"

[dependency-groups]
dev = [
  "icecream==2.1.7",
  "ipdb==0.13.13",
  "pre-commit>=3.7",
  "pytest>=8",
  "ruff>=0.8.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["opendde*", "runner*"]
exclude = ["assets*", "benchmark*", "docs*", "examples*", "scripts*", "tests*"]

[tool.setuptools.package-data]
opendde = ["model/layer_norm/kernel/*"]

[tool.setuptools.dynamic]
version = { attr = "opendde.version.__version__" }

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
  "network: tests that access external network services",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "output",
]

[tool.ruff.lint]
# Keep CI focused on high-confidence syntax and undefined-name checks while the
# existing tree is gradually normalized.
select = ["E9", "F63", "F7", "F82"]
